various changes. not sure why the styling on the active kickstart button broke but decided i should commit about now

--- a/client/styles.css
+++ b/client/styles.css
@@ -12,15 +12,11 @@ right: -755px;
 padding-left: 7px;
 }
 
-#kickstart {
+.kickstart {
 float: right;
 width: 50px;
 height: 20px;
 margin-right: 24px;
-}
-
-.bluechangeme{
-background:blue;
 }
 
 body {
