--- a/client/styles.css
+++ b/client/styles.css
@@ -13,11 +13,19 @@ padding-left: 7px;
 right: -782px;
 }
 
-.kickstart {
+.kickstart, .reviewproject {
 float: right;
-width: 50px;
 height: 20px;
 margin-right: 24px;
+}
+
+.kickstart {
+width: 50px;
+}
+
+.reviewproject {
+position: relative;
+top: -30px;
 }
 
 body {
