--- a/client/styles.css
+++ b/client/styles.css
@@ -87,11 +87,7 @@ background-color:#B7F099;
 padding-top:0;
 margin-top:-2px;
 }
-#sync{
-margin:0;
-padding:0;
-}
-#sync .btn{
+.review-btn {
 float: left;
 clear: both;
 margin: 0px 40%;
