--- a/client/styles.css
+++ b/client/styles.css
@@ -123,7 +123,7 @@ background: #007F00;
 color: #FFB;
 }
 .modal-body{
-overflow:scroll;
+overflow:auto;
 max-height:550px;
 }
 .btn-inverse:active, .btn-inverse.active {
