starting to add the contextpicker to the Review tab

--- a/client/styles.css
+++ b/client/styles.css
@@ -376,3 +376,12 @@ display: inline-block;
 
 .load-more-project a {
 }
+
+ul#contextpicker {
+display: inline-block;
+}
+
+#contextpicker li {
+float: left;
+padding: 20px;
+}
