--- a/client/styles.css
+++ b/client/styles.css
@@ -360,7 +360,7 @@ margin-right: 6px;
   height: 100px;
   width: 100%;
 }
-.load-more-unprocessed, .load-more-calendar, .load-more-mits, .load-more-waitingfors, .load-more-projects, .load-more-somedaymaybeprojects, .load-more-projectlesssomedaymaybes{
+.load-more-unprocessed, .load-more-calendar, .load-more-contextpicker, .load-more-mits, .load-more-waitingfors, .load-more-projects, .load-more-somedaymaybeprojects, .load-more-projectlesssomedaymaybes{
   text-align:center;
   background:#eee;
   border: 1px solid #ddd;
@@ -379,6 +379,7 @@ display: inline-block;
 
 ul#contextpicker {
 display: inline-block;
+width: 100%;
 }
 
 #contextpicker li {
