--- a/client/styles.css
+++ b/client/styles.css
@@ -15,9 +15,13 @@ right: -99%;
 right: auto;
 }
 
-#project_list .projclose.close {
+#project_list .projclose.close, .contclose.close {
 clear: both;
 float: left;
+
+  position: relative;
+  top: -45px;
+display: block;
 }
 
 .kickstart, .reviewproject {
@@ -35,8 +39,13 @@ float: right;
 
 .reviewproject {
 position: relative;
-top: -33px;
+top: -56px;
 float: left;
+}
+
+.reviewproject{
+float: left;
+clear: both;
 }
 
 body {
@@ -77,7 +86,9 @@ padding:0;
 clear: both;
 }
 #project_list #task_list {
-clear: none;
+//clear: none;
+top: -35px;
+  position: relative;
 }
 #task_list li, #active_project_list li{
 list-style:none;
