--- a/client/styles.css
+++ b/client/styles.css
@@ -377,7 +377,7 @@ float: left;
   height: 100px;
   width: 100%;
 }
-.load-more-unprocessed, .load-more-calendar, .load-more-contextpicker, .load-more-context, .load-more-inactivecontextpicker , .load-more-mits, .load-more-waitingfors, .load-more-projects, .load-more-somedaymaybeprojects, .load-more-projectlesssomedaymaybes{
+.load-more-unprocessed, .load-more-calendar, .load-more-contextpicker, .load-more-context, .load-more-projectedcontext, .load-more-inactivecontextpicker , .load-more-mits, .load-more-waitingfors, .load-more-projects, .load-more-somedaymaybeprojects, .load-more-projectlesssomedaymaybes{
   text-align:center;
   background:#eee;
   border: 1px solid #ddd;
@@ -407,5 +407,9 @@ padding: 0 20px;
 
 
 .startprocessing-button {
+clear: both;
+}
+
+h3 {
 clear: both;
 }
