work in progress works for project items

--- a/client/styles.css
+++ b/client/styles.css
@@ -19,7 +19,7 @@ position: relative;
 width: auto;
 margin: 0;
 }
-#project_list .projpip.close, #focusproject_list .projclose.close, #project_list .projclose.close {
+#project_list .projpip.close, #focusproject_list .projclose.close, #project_list .projclose.close, #focusproject_list .projpip.close {
 clear: both;
 float: left;
 
