more than half-way done with Contexts in Progress

--- a/client/styles.css
+++ b/client/styles.css
@@ -36,9 +36,9 @@ top: 21px;
 }
 */
 
-.contclose.close {
+.contclose.close, .contcip.close {
 float: left;
-padding: 20px 0;
+padding: 20px 10px 20px 0px;
 }
 .kickstart {
 float: right;
