changing css on the map, was also testing to see if rendering the map based on user location could work the first time

--- a/client/gmaps.css
+++ b/client/gmaps.css
@@ -5,15 +5,25 @@
   margin: 0px;
   padding: 0px;
   float: left;
+  height: 500px;
+  width: 100%;
+  position: relative;
 }
 
 #directions-panel {
-  height: 500px;
+  max-height: 500px;
   float: left;
-  width: 200px;
+  width: 100%;
   overflow: auto;
+  clear: both;
+  display: inline-block;
+  position: relative;
 }
 
 .warnbox-c1, .warnbox-c2, .warnbox-content {
   display: none !important;
+}
+
+.clearboth {
+clear: both;
 }
