--- a/client/styles.css
+++ b/client/styles.css
@@ -385,7 +385,7 @@ float: left;
   height: 100px;
   width: 100%;
 }
-.load-more-unprocessed, .load-more-previouscalendar, .load-more-calendar, .load-more-focuscontextpicker, .load-more-contextpicker, .load-more-context, .load-more-projectedcontext, .load-more-inactivecontextpicker , .load-more-mits, .load-more-readandreview, .load-more-waitingfors, .load-more-focusprojects, .load-more-projects, .load-more-somedaymaybeprojects, .load-more-projectlesssomedaymaybes{
+.load-more-unprocessed, .load-more-previouscalendar, .load-fewer-previouscalendar, .load-more-calendar, .load-more-focuscontextpicker, .load-more-contextpicker, .load-more-context, .load-more-projectedcontext, .load-more-inactivecontextpicker , .load-more-mits, .load-more-readandreview, .load-more-waitingfors, .load-more-focusprojects, .load-more-projects, .load-more-somedaymaybeprojects, .load-more-projectlesssomedaymaybes{
   text-align:center;
   background:#eee;
   border: 1px solid #ddd;
@@ -474,9 +474,9 @@ background-color: grey;
 }
 
 #task_list li.overdue:hover{
-background-color: blue;
+background-color: darkgray;
 }
 
 .overdue p {
-color: red;
+color: yellow;
 }
